--- a/public/index.html
+++ b/public/index.html
@@ -111,9 +111,9 @@
                 <input type="text" id="user-search" placeholder="Search users..." onkeyup="filterUsers()">
                 <select id="user-role-filter" onchange="filterUsers()">
                     <option value="">All Roles</option>
-                    <option value="user">User</option>
-                    <option value="admin">Admin</option>
+                    <option value="member">Member</option>
                     <option value="manager">Manager</option>
+                    <option value="admin">Admin</option>
                 </select>
                 <select id="user-status-filter" onchange="filterUsers()">
                     <option value="">All Status</option>
@@ -236,9 +236,9 @@
                 <div class="form-group">
                     <label>Role</label>
                     <select id="user-role">
-                        <option value="user">User</option>
-                        <option value="admin">Admin</option>
+                        <option value="member">Member</option>
                         <option value="manager">Manager</option>
+                        <option value="admin">Admin</option>
                     </select>
                 </div>
                 <div class="form-group">
